@@ -5,7 +5,7 @@ data:extend({{
     icon = "__electric-trains__/graphics/icons/electric-locomotive.png",
     icon_size = 64,
     subgroup = "train-transport",
-    order = "a[train-system]-f[locomotive]",
+    order = "c[rolling-stock]-f[locomotive]",
     place_result = "electric-locomotive",
     stack_size = 5,
     inventory_move_sound = item_sounds.locomotive_inventory_move,
@@ -18,7 +18,7 @@ data:extend({{
     icon = "__electric-trains__/graphics/icons/electric-locomotive-wagon.png",
     icon_size = 64,
     subgroup = "train-transport",
-    order = "a[train-system]-f[locomotiveb]",
+    order = "c[rolling-stock]-f[locomotiveb]",
     place_result = "electric-locomotive-wagon",
     stack_size = 5,
     inventory_move_sound = item_sounds.locomotive_inventory_move,
@@ -31,7 +31,7 @@ data:extend({{
     icon_size = 64,
     icon_mipmaps = 4,
     subgroup = "train-transport",
-    order = "a[train-system]-h[cargo-wagon]",
+    order = "c[rolling-stock]-h[cargo-wagon]",
     place_result = "electric-cargo-wagon",
     stack_size = 5,
     inventory_move_sound = item_sounds.metal_large_inventory_move,
@@ -44,7 +44,7 @@ data:extend({{
     icon_size = 64,
     icon_mipmaps = 4,
     subgroup = "train-transport",
-    order = "a[train-system]-i[fluid-wagon]",
+    order = "c[rolling-stock]-i[fluid-wagon]",
     place_result = "electric-fluid-wagon",
     stack_size = 5,
     inventory_move_sound = item_sounds.metal_large_inventory_move,
